fixed sticky issue on safari

--- a/styles/sass/layout/_header.sass
+++ b/styles/sass/layout/_header.sass
@@ -26,6 +26,7 @@ header
 
 .sticky-on-scroll
   position: sticky
+  position: -webkit-sticky
   top: 0
   max-height: 100%
   z-index: 10000
